--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
         <div class="header">
             <h2>Trade Information Warehouse</h2>
         </div>
-        <img src="assets/images/profile.jpg" alt="DTCC" />
+        <img src="assets/images/profile.jpg" alt="TIW" />
     </div>
 
     <mat-divider></mat-divider>
@@ -19,10 +19,10 @@
     <a mat-list-item routerLink="/trades" routerLinkActive="list-item-active">Trades
     </a>
     <!-- add a ref link with routerlink for reports -->
-    <a mat-list-item routerLink="/reports" routerLinkActive="list-item-active">Reports
+    <a mat-list-item routerLink="/reports" routerLinkActive="list-item-active">Position Reports
     </a>
     <!-- add a ref link with routerlink for reports -->
-    <a mat-list-item routerLink="/positionReports" routerLinkActive="list-item-active">Position Reports
+    <a mat-list-item routerLink="/positionReports" routerLinkActive="list-item-active">Submission Reports
     </a>
 
 
